[package]
name = "prost-types"
readme = "README.md"
description = "Prost definitions of Protocol Buffers well known types."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[features]
default = ["std"]
std = ["prost/std"]
chrono = ["dep:chrono"]

[dependencies]
prost = { version = "0.13.2", path = "../prost", default-features = false, features = ["prost-derive"] }
chrono = { version = "0.4", default-features = false, features = [], optional = true}

[dev-dependencies]
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
